fix: add background color to hero banner on mobile

--- a/public/assets/css/default-theme.css
+++ b/public/assets/css/default-theme.css
@@ -118,6 +118,7 @@
   }
   .banner-two {
     margin-top: -1px !important;
+    background: #ebebeb;
   }
 }
 
